--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -36,10 +36,10 @@
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/signup">Ingresar</a>
+                    <a class="nav-link" href="/signup">Registrarse</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/signin">Registrarse</a>
+                    <a class="nav-link" href="/signin">Ingresar</a>
                 </li>
                 {% endif %}
             </ul>
