--- a/tasks/templates/home.html
+++ b/tasks/templates/home.html
@@ -3,15 +3,17 @@
 <main class="container py-5">
     <section class=" card card-body">
         <h1 class="display-1 text-center">Django App</h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, recusandae!
-    <div class ="text-center">
-        <a class="btn btn-secondary" href="/signin/">
-            Signin
-        </a>
-        <a class="btn btn-dark" href="/signup/">
-            Signup
-        </a>
-    </div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptate error molestiae magnam reiciendis facere quod commodi aspernatur consequuntur id, modi enim accusantium illum nihil facilis. Quidem quam cupiditate minus placeat, perspiciatis perferendis error quasi sed inventore officia suscipit qui expedita, laborum at reprehenderit nisi consectetur. Laboriosam similique doloremque earum dolores odit saepe optio eligendi odio, repellendus, molestias possimus aspernatur ipsam. A dolorem odit exercitationem minima ratione quis veniam neque, similique incidunt suscipit magni placeat culpa harum ipsum! Deserunt, natus, rerum quia cupiditate culpa eveniet laboriosam voluptatum fuga dolores placeat explicabo sapiente eos quo praesentium officiis eius vel facilis sunt.
+        </p>
+
+        <div class ="text-center">
+            <a class="btn btn-secondary" href="/signin/">
+                Signin
+            </a>
+            <a class="btn btn-dark" href="/signup/">
+                Signup
+             </a>
+        </div>
     </section>
 </main>
 {% endblock %}
