--- a/tasks/templates/home.html
+++ b/tasks/templates/home.html
@@ -7,6 +7,9 @@
         </p>
 
         <div class ="text-center">
+            {% if user.is_authenticated %}
+            <a class="btn btn-success" href="/tasks/create">Crear Tarea</a>
+            {% else %}
             <a class="btn btn-secondary" href="/signin/">
                 Signin
             </a>
