--- a/tasks/templates/home.html
+++ b/tasks/templates/home.html
@@ -16,6 +16,7 @@
             <a class="btn btn-dark" href="/signup/">
                 Signup
              </a>
+            {% endif %}
         </div>
     </section>
 </main>
