--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -10,7 +10,7 @@
                 {% csrf_token %}
                 {{form.as_p}}
                 <button class="btn btn-primary">Save</button>
-            </form>>
+            </form>
         </div>
     </div>  
 </main>
