--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -5,11 +5,11 @@
     <div class="row">
         <div class="col-md-4 offset-md-4 mt-5">
             <form action="/tasks/create/" method="POST">
-                <h1>Create task</h1>
+                <h1>Crear Tarea</h1>
                 {{error}}
                 {% csrf_token %}
                 {{form.as_p}}
-                <button class="btn btn-primary">Save</button>
+                <button class="btn btn-primary">Guardar</button>
             </form>
         </div>
     </div>  
