--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -4,22 +4,22 @@
     <div class="row">
         <div class="col-md-4 offset-md4 mt-5">
             <form action="/signup/" method="POST" class="card card-body">
-                <h1 class="text-center">Signup</h1>
+                <h1 class="text-center">Registratse</h1>
                 {{error}}
                 {% csrf_token %}
                 <div class="mb-3">
-                    <label for="username">Username: </label>
-                    <input type="text" name="username" id="username" class="form-control" placeholder="Write your username">
+                    <label for="username">Nombre de Usuario: </label>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="Escribe tu nombre de Usuario">
                 </div>
 
                 <div class="mb-3">
-                    <label for="password1">Pasword: </label>
-                    <input type="password" name="password1" id="password1" class="form-control" placeholder="Write your password">
+                    <label for="password1">Contraseña: </label>
+                    <input type="password" name="password1" id="password1" class="form-control" placeholder="Escribe tu contraseña">
                 </div>
 
                 <div class="mb-3">
-                    <label for="password2">Pasword: </label>
-                    <input type="password" name="password2" id="password2" class="form-control" placeholder="Confirm your password">
+                    <label for="password2">Contraseña: </label>
+                    <input type="password" name="password2" id="password2" class="form-control" placeholder="Confirma tu Contraseña">
                 </div>
 
                 <button>
