--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -10,7 +10,7 @@
                     {% csrf_token %}
                     {{form.as_p}}
                     <button class="btn btn-primary">
-                        Update
+                        Actualizar
                     </button>
                 </form>
                 <div class="d-flex mt-5">
@@ -18,13 +18,13 @@
                     <form action="{% url 'complete_task' task.id %}"method="POST">
                         {% csrf_token %}
                         <button class="btn btn-secondary">
-                            Complete
+                            Completar
                         </button>
                     </form>
                     <form action="{% url 'delete_task' task.id %}"method= "POST">
                         {% csrf_token %}
                         <button class="btn btn-danger">
-                            Delete
+                            Eliminar
                         </button>
                     </form>
                 </div>
