--- a/tasks/templates/home.html
+++ b/tasks/templates/home.html
@@ -11,10 +11,10 @@
             <a class="btn btn-success" href="/tasks/create">Crear Tarea</a>
             {% else %}
             <a class="btn btn-secondary" href="/signin/">
-                Signin
+                Ingresar
             </a>
             <a class="btn btn-dark" href="/signup/">
-                Signup
+                Registrarse
              </a>
             {% endif %}
         </div>
