--- a/tasks/templates/home.html
+++ b/tasks/templates/home.html
@@ -2,8 +2,8 @@
 {% block content %}
 <main class="container py-5">
     <section class=" card card-body">
-        <h1 class="display-1 text-center">Aplicacion Django</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptate error molestiae magnam reiciendis facere quod commodi aspernatur consequuntur id, modi enim accusantium illum nihil facilis. Quidem quam cupiditate minus placeat, perspiciatis perferendis error quasi sed inventore officia suscipit qui expedita, laborum at reprehenderit nisi consectetur. Laboriosam similique doloremque earum dolores odit saepe optio eligendi odio, repellendus, molestias possimus aspernatur ipsam. A dolorem odit exercitationem minima ratione quis veniam neque, similique incidunt suscipit magni placeat culpa harum ipsum! Deserunt, natus, rerum quia cupiditate culpa eveniet laboriosam voluptatum fuga dolores placeat explicabo sapiente eos quo praesentium officiis eius vel facilis sunt.
+        <h1 class="display-1 text-center">Aplicación Django</h1>
+        <p>Esta es una aplicacion de prueba de Django, usando python y html, en Visual Studio Code. Esta pagina Web se esta mostrando y utilizando a traves de Render.com. Este texto es solo de prueba y por decision personal. 
         </p>
 
         <div class ="text-center">
