--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -3,7 +3,7 @@
     <main class="container">
         <div class="row-">
             <div class="col-md-4 offset-md-4 mt-5">
-                <h1 class="rext-secondary">{{task.titulo}}</h1>
+                <h1 class="rext-secondary">{{task.title}}</h1>
                 {{error}}
 
                 <form method="POST">
