--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -10,9 +10,9 @@
                     <a class="list-group-item" href="{% url 'task_detail' task.id %}">
                         <header class="d-flex justify-content-between">
                             {% if task.important %}
-                                <h1 class="fw-bold text-succes">{{task.titulo}}</h1>
+                                <h1 class="fw-bold text-succes">{{task.title}}</h1>
                             {% else %}
-                            <h1 class="fw-bold">{{task.titulo}}</h1>
+                            <h1 class="fw-bold">{{task.title}}</h1>
                             {% endif %}
                             <p>{{task.user.username}}</p>
                         </header>
